exports[`Table React component Renders Bordered correctly 1`] = `
<table
  className="table border">
  <tbody
    className="tableBody">
    <tr
      className="tableRow">
      <td
        className="tableCell border"
        colSpan={1}>
        Cell 1
      </td>
      <td
        className="tableCell border"
        colSpan={1}>
        Cell 2
      </td>
      <td
        className="tableCell border"
        colSpan={1}>
        Cell 3
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table React component Renders Un-bordered correctly 1`] = `
<table
  className="table">
  <tbody
    className="tableBody">
    <tr
      className="tableRow">
      <td
        className="tableCell"
        colSpan={1}>
        Cell 1
      </td>
      <td
        className="tableCell"
        colSpan={1}>
        Cell 2
      </td>
      <td
        className="tableCell"
        colSpan={1}>
        Cell 3
      </td>
    </tr>
  </tbody>
</table>
`;
